--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "node-sass": "^6.0.1",
+    "nodemon": "^2.0.12",
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
