--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "nodemon ./server/server.js",
     "build": "webpack --watch",
-    "test": "jest --verbose"
+    "test": "jest --verbose",
+   "heroku-postbuild": "webpack"
   },
   "repository": {
     "type": "git",
