--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@babel/core": "^7.14.8",
     "@babel/preset-env": "^7.14.8",
     "@babel/preset-react": "^7.14.5",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@reduxjs/toolkit": "^1.6.1",
     "babel-loader": "^8.2.2",
     "babel-polyfill": "^6.26.0",
