--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "nodemon": "^2.0.12",
     "path": "^0.12.7",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
